--- a/biostat625_final_report.Rmd
+++ b/biostat625_final_report.Rmd
@@ -40,8 +40,8 @@ Statistical analyses were conducted by RStudio, and result visualization were co
 
 After transformation, data visualizations were created to show associations between outcome and other variables by conducting logistic regression. By investigating the distribution of values in each categories, we also found that there exist unbalanced data in our data set, especially for outcomes (See detailed analysis in  \href{liz/Transformation and descriptive.Rmd}{transformation and descriptive}). Proportions of missing values for each variable are also displayed in \textbf{Table 1}, and \textbf{Figure 1} further demonstrated the nonrandom missing pattern for variables.
 
-![](C:/Users/guoyijun/Desktop/course/625/project1/Variable Category-1.jpg){width=50%} 
-![](C:/Users/guoyijun/Desktop/course/625/project1/Figure 1 Missing Values-1.jpg){width=40%,helght=40%}
+![](liz/Variable Category-1.jpg){width=50%} 
+![](liz/Figure 1 Missing Values-1.jpg){width=40%,helght=40%}
 
 \vspace{-0.4cm}
 \subsection{Data processing}
@@ -61,7 +61,7 @@ According the statistical analyses, there are 91.8\% (398,735) normal observatio
 \vspace{-0.4cm}
 Logistic regression (LR) is a type of generalized linear model, which means that it is a linear model that is used to predict a categorical response. It is called "logistic" because it uses the logistic function to model the probability of an event occurring (\textbf{Figure 2}). The logistic function is a sigmoid curve that maps any input value to a value between 0 and 1. This allows the model to predict the probability that an example belongs to a certain class. 
 
-![](C:/Users/guoyijun/Desktop/course/625/project1/logistic function.PNG){width=50%} 
+![](liz/logistic function.PNG){width=50%} 
 \vspace{-0.6cm}
 \subsubsection{XGBoost}
 \vspace{-0.4cm}
@@ -70,7 +70,7 @@ XGBoost (eXtreme Gradient Boosting) is a powerful and widely-used gradient boost
 \subsubsection{XGBoost + SparseLR}
 \vspace{-0.4cm}
 Typically, the LR model can only handle linear association between the outcome and predictors. It is always time consuming and sometimes subjective to extract features from the original dataset manually. Many researchers have explored various ways to perform an efficient feature engineering. GBDT+LR[2] was a combined machine learning model proposed to process and extract the information in the dataset automatically. To be specific, we firstly train a gradient boosting tree model. For each tree in the ensemble model, every data row is going to fall on one of the leaf nodes, forming a new feature vector. Suppose there are $k$ trees in the model and each tree has $l$ leaf nodes on average. The original $n\times m$ dataset will then be transformed into a $n\times kl$ dataset, with each row as an one-hot vector. Since the new dataset only contains 0 and 1 and most them are 0, we could apply sparse matrix algorithm to accelerate the latter Logistic Regression module. However, there is also some argument about whether the combination of GBDT and LR really outperforms a sole GBDT model. Therefore, we are also doing experiments \footnote{For better implementation in R, we choose XGBoost instead of a vanilla GBDT model.}to compare the result of different models.
-![](C:/Users/guoyijun/Desktop/course/625/project1/gbdtlr_v2.PNG){width=40%,height=40%} 
+![](liz/gbdtlr_v2.PNG){width=40%,height=40%} 
 
 \vspace{-0.4cm}
 \subsection{Evaluation}
@@ -84,7 +84,7 @@ We firstly divide our dataset into the train set (80\%) and the test set (20\%).
 \vspace{-0.4cm}
 Note that for SMOTE sampling method and XGBoost model, there are a set of hyperparameters to determine. For example, the number of neighbors chosen $k$ in SMOTE, the number of trees and the nodes of each tree in XGBoost, etc. A feasible solution is to perform a 5-fold cross-validation on train dataset. To be specific, we firstly decide a rough range of the hyperparameters and divide the train dataset into 5 equal subsets. And then we use the four of them to try possible hyperparameters and select the best hyperparameters based on the performance of the rest one subset. The optimal hyperparameters used in our model are listed in table \textbf{Table 2}.
 
-![](C:/Users/guoyijun/Desktop/course/625/project1/table2.PNG){width=50%} 
+![](liz/table2.PNG){width=50%} 
 
 \vspace{-0.4cm}
 \section{Results}
@@ -94,16 +94,16 @@ Note that for SMOTE sampling method and XGBoost model, there are a set of hyperp
 1) LR Coefficients:
 For logistic regression model, we use the test set for inference and the full dataset to calculate model Coefficients, e.g. OR (Odds Ratio) and its corresponding p-value. The results are listed in \textbf{Table 3}.
 
-![](C:/Users/guoyijun/Desktop/course/625/project1/lrresults_table-1.jpg){width=50%} 
+![](liz/lrresults_table-1.jpg){width=50%} 
 
 2) XGBoost Vector Influence:
 Note that XGBoost, as a boosting ensemble learning strategy, is hard to interpret directly. However, we could calculate the influence value of each factor. In addition, this value would not be affected by the scale of the data. 
-![](C:/Users/guoyijun/Desktop/course/625/project1/XGB.png){width=40%}
+![](liz/XGB.png){width=40%}
 
 3) Model Metrics:
 Based on the models and preprocessing methods mentioned above, we calculate different metrics for evaluation. The details are listed in the \textbf{Table 4}.
 
-![](C:/Users/guoyijun/Desktop/course/625/project1/table4-1.jpg){width=50%} 
+![](liz/table4-1.jpg){width=50%} 
 
 As shown in the table, the XGBoost based model always perform slightly better than LR models. In terms of SMOTE sampling, the F1 score increased drastically on train dataset after using SMOTE. However, the F1 score of test dataset seems to be similar. This may indicate that, sampling-based method is also essentially assigning different weights to two classes, as the distribution of train and test dataset changed as well as the threshold chosen. But there is an advantage of using SMOTE. After using sampling methods, the size of our dataset shrank by 80%, leading to much faster training speed, but remained almost the same result. This indicates that for some large dataset, we could use sampling methods to get a trained model more quickly. Also, note that the performance of XGBoost+LR almost has the same performance with a sole XGBoost model. A possible reason is because the XGBoost model has already learned enough information from the dataset and a LR does not really help to make it better. This result is also consistent to some research mentioned before.
 
